# turtle-logo

./: CLAUDE.md  README.md  index.html  package.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Canvas.tsx  Editor.tsx  Gallery.tsx  Toolbar.tsx
src/examples/: examples.test.ts  index.ts
src/hooks/: useTurtle.ts
src/interpreter/: ast.ts  executor.test.ts  executor.ts  index.ts  parser.test.ts  parser.ts
src/renderer/: TurtleRenderer.ts
