[package]
name = "turtle-logo"
version = "0.1.0"
description = "Turtle Logo — a Logo turtle graphics webapp"
authors = ["you"]
edition = "2021"

[lib]
name = "turtle_logo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
